# my-nutri

./: .gitignore  README.md  pyproject.toml
example/: consumption.json  food.json  meal.json
src/: main.py
src/database/: database.py  models.py  unit.py
