[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "my-nutri"
version = "1.0.0"
description = "MyNutri - Track your meals, log nutrition for foods, and calculate nutrition for your recipes."
authors = [{ name = "Lei Wu", email = "leiwuinfo@gmail.com" }]
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
keywords = ["nutrition", "meal tracking", "recipe nutrition"]
classifiers = ["Programming Language :: Python :: 3"]
urls = { "Homepage" = "https://github.com/leiwu84/my-nutri" }
dependencies = [
    "pandas",
    "numpy",
    "plotly",
    "fastapi[standard]",
    "sqlmodel",
    "pydantic",
    "requests",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-subtests"]
build = ["build"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
